# hwspanel_for_rust

./: Cargo.toml  README.md  application.yaml
src/: lib.rs  main.rs
src/api/: mod.rs  public.rs  resources.rs  router.rs  routers.rs
src/appliaction/: mod.rs  resources.rs
src/config/: config.rs
src/infrastructure/: cli.rs  config.rs  mod.rs
src/routers/: api.rs
