[package]
name = "hwspanel_for_rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
axum = "0.5.16"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
getset = "0.1.2"
state = { version = "0.5.3", features = ["tls"] }
clap = { version = "4.0.15", features = ["derive"] }
