[package]
name = "hwspanel_for_rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.22", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
getset = "0.1"
clap = { version = "4.0", features = ["derive"] }
state = { version = "0.5", features = ["tls"] }
sysinfo = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"
